# Course_project_on_oop

./: README.md  pyproject.toml
classes/: json_saver.py  utils.py  vacancies_api.py  vacancy.py
src/: main.py
