[tool.poetry]
name = "course-project-on-oop"
version = "0.1.0"
description = ""
authors = ["plete <pletenev_o@mail.ru>"]
readme = "README.md"
packages = [{include = "course_project_on_oop"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
